--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
-body {
-  
+body{
+  background-color: #b3c0d6;
+}
+
+img {
+  margin: 24px auto;
+  display: block;
+}
+
+h1 {
+font-family: Open Sans, sans-serif;
+text-align: center;
+font-size: 30px;
+}
+
+form {
+  display: block;
+  margin: 0 auto;
+  max-width: 600px;
+  text-align: center;
 }
